project/logs/20250530_191715.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Compile Succeeded,path:Object3d.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3d.PS.hlsl,prefile:ps_6_0

Object3d.PS.hlsl:22:56: error: no member named 'input' in 'SamplerState'
    float32_t4 textureColor = gTexture.Sample(gSampler.input.texcoord);
                                              ~~~~~~~~ ^

